force-app/main/default/objects/Visit_Product_Survey_Feedback__c/Visit_Product_Survey_Feedback__c.object-meta.xml
<CustomObject>
    <label>Visit Product Survey Feedback</label>
    <nameField>
        <displayFormat>VPSF-{00000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Product Survey Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>