force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Product Survey Feedbacks</relationshipLabel>
    <relationshipName>Account_Product_Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>