force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Assigned_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Product_Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>