force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Survey</fullName>
            </value>
            <value>
                <fullName>WhatsApp Survey</fullName>
                <default>true</default>
                <label>WhatsApp Survey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>