force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Usage_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Usage_Sentiment__c</fullName>
    <label>Usage Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>