force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Product Survey Feedbacks</relationshipLabel>
    <relationshipName>Product_Survey_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>