force-app/main/default/objects/Visit_Product_Survey_Feedback__c/fields/Visit_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Visit_Feedback__c</fullName>
    <label>Visit Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>